--- a/expressRest/package.json
+++ b/expressRest/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "node-dev ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -13,5 +14,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.4",
+    "log4js": "^2.3.12",
+    "node-dev": "^3.1.3",
+    "socket.io": "^2.0.4"
   }
 }
